--- a/css/styles.css
+++ b/css/styles.css
@@ -16,18 +16,18 @@ h1{
 #game-init{
     position: absolute;
     text-align: center;
-    width: 50%;
+    width: 500px;
     z-index: 99;
     margin: auto auto;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-    height: 45%;
+    height: 300px;
     background-color: #dbdbdb;
     padding: 30px;
 }
 #game-btn{
-    margin-top: 30px;
-    padding: 10px 100px;
+    margin-top: 70px;
+    padding: 10px 50px;
 }
