--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,11 @@ canvas{
     background-color: black;
 }
 h1{
-    padding: 10px;
+    padding: 20px;
+    font-size: 1.5rem;
+}
+p{
+    font-size: 1.4rem;
 }
 .score-div{
     position: absolute;
@@ -16,18 +20,18 @@ h1{
 #game-init{
     position: absolute;
     text-align: center;
-    width: 500px;
+    width: 800px;
     z-index: 99;
     margin: auto auto;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-    height: 300px;
+    height: 350px;
     background-color: #dbdbdb;
     padding: 30px;
 }
 #game-btn{
     margin-top: 70px;
-    padding: 10px 50px;
+    padding: 10px 20px;
 }
